--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=reservation
-server.port=5000
+# comment port in order to run multiple instances from run configurations of IDE
+#server.port=5000
 # where is eureka server for registry and discovery
 eureka.client.serviceUrl.defaultZone=http://localhost:5004/eureka/
